...
            fieldType="email"
            name="email"
            form={form}
            inputRef={emailRef}
            placeholder="Email"
            onSubmitEditing={handleNext}
            testID="CartSignIn.email"
          />
        </Container>

        <Container>
          <CustomButton
            bold
...
