...
            required
            name="password"
            isLoginPassword
            errorMessage={() => 'Enter a valid password'}
            form={form}
            placeholder="Password"
            testID="CartLogin.password"
            onSubmitEditing={handleSubmit}
          />
        </Container>
        {!isSocietyMember && <SocietyCheckBox showLogo form={form} navigation={navigation} />}
        <CustomButton
          bold
...
