...
  return (
    <Container>
      <Container ph={2} pv={2}>
        <Type light size={16} letterSpacing={1} lineHeight={24}>
          Welcome back {account.first_name}
        </Type>
        <Type bold mb={1} size={13} testID="AccountSettings.email" letterSpacing={1} lineHeight={20}>
          {account.email}
        </Type>
        <Container rows>
          <CustomButton
            onPress={onLogout}
            background="white"
...
